--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -41,7 +41,7 @@
 \def\OptimalObj{R^*}
 \def\OptimalRL{d^*}
 \def\Remaining{\Gamma}
-\def\MaxRemaining{{\Gamma_{\textnormal{max}}}}
+\def\TotalRemaining{{\Gamma_{\textnormal{tot}}}}
 \def\Queue{Q}
 \DeclareMathOperator*{\argmin}{argmin}
 \DeclareMathOperator*{\argmax}{argmax}
