--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -31,7 +31,7 @@
 \def\Loss{\ell}
 \def\Reg{{\lambda}}
 \def\MaxLength{{K_{\textnormal{max}}}}
-\def\RuleSet{{\mathcal S}}
+\def\RuleSet{S}
 \def\Cap{\textnormal{cap}}
 \def\Supp{\textnormal{supp}}
 \def\InitialObj{R^0}
